--- a/css/style.scss
+++ b/css/style.scss
@@ -6,18 +6,102 @@
   
   }
 
+  html {
+    scroll-behavior: smooth;
+  }
+
+/*-------------------------------------*/
+/*----------Header & navigation-------*/
+/*-------------------------------------*/
+
   header {
     height: 50px;
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: space-between;
+    border: 1px solid;
 
-    h2 {
+    nav {
+      background-color: white;
+      position: fixed;
+       top: 0;
+       width: 100%;
+       display: flex;
+       justify-content: space-between;
+       padding-left: 20px;
+       padding-right: 20px;
+    }
+
+    a {
+      color: black;
+      text-decoration: none;
+    }
+
+    h1 {
         text-transform: uppercase;
         font-size: 1.5rem;
-        margin: 0;
-        margin-left: 10px;
+    }
+
+    .material-symbols-outlined {
+      position: relative;
+      top: 25px;
+      font-size: 2rem;
+    }
+  }
+
+/*-------------------------------------*/
+/*---------------Info text------------*/
+/*-------------------------------------*/
+
+.informationText {
+  text-align: center;
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+}
+
+/*-------------------------------------*/
+/*-------------Product items----------*/
+/*-------------------------------------*/
+
+  .donutsWrapper {
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 25px;
+
+    .images {
+      padding-top: 15px;
+    }
+
+    h3 {
+      font-size: 1.3rem;
+    }
+
+    .donutPrice, .countText, .amountValue {
+      font-size: 1.2rem;
+    }
+
+    .productsCount {
+      padding: 10px;
+    }
+
+    .subtractBtn, .addBtn {
+      background-color: black;
+      color: white;
+      width: 35px;
+      height: 35px;
+      font-size: 1rem;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+
+    .addToCartBtn {
+      height: 35px;
+      width: 72px;
+      background-color: black;
+      color: white;
     }
   }
 
