functions for buttons + & -

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,11 @@
     scroll-behavior: smooth;
   }
 
+    main {
+      padding: 14px;
+      width: 100%;
+    }
+
 /*-------------------------------------*/
 /*----------Header & navigation-------*/
 /*-------------------------------------*/
