compressed images and added 8 more donuts

--- a/css/style.scss
+++ b/css/style.scss
@@ -186,6 +186,7 @@ header {
   justify-content: space-between;
   padding-inline: 0.5rem;
   margin-block-end: 1rem;
+  border: 1px solid black;
   border-radius: 0.625rem;
   font-weight: 600;
   font-style: italic;
