--- a/css/style.scss
+++ b/css/style.scss
@@ -123,6 +123,14 @@ header {
   padding-bottom: 25px;
   font-family: $robotoCondensed-font-family;
 
+  article {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
   img {
     padding-top: 15px;
     width: 160px;
@@ -134,6 +142,10 @@ header {
     font-size: 1.3rem;
     font-style: italic;
     font-weight: 600;
+  }
+
+  .donutRating {
+    margin-bottom: 10px;
   }
 
   .donutPrice,
