toggle between card & invoice funuction

--- a/css/style.scss
+++ b/css/style.scss
@@ -114,6 +114,14 @@ header {
 }
 
 /*-------------------------------------*/
+/*-------------Filter items-----------*/
+/*-------------------------------------*/
+
+.sortingSection {
+  text-align: center;
+}
+
+/*-------------------------------------*/
 /*-------------Product items----------*/
 /*-------------------------------------*/
 
