small styling fixes, prettier

--- a/css/_dark-theme.scss
+++ b/css/_dark-theme.scss
@@ -20,11 +20,14 @@
         margin-bottom: 15px;
       }
     }
-  
+
+    .checkoutHeader {
+      background-color: white;
+      color: black;
+    }
+
     .checkoutContainer .checkoutForm label span {
       color: white;
     }
   }
-
-  
 }
