--- a/css/_dark-theme.scss
+++ b/css/_dark-theme.scss
@@ -29,5 +29,10 @@
     .checkoutContainer .checkoutForm label span {
       color: white;
     }
+
+    footer {
+      background-color: white;
+      color: black;
+    }
   }
 }
