--- a/css/style.scss
+++ b/css/style.scss
@@ -124,7 +124,6 @@ header {
 
   .material-symbols-outlined {
     position: relative;
-    top: 10px;
     font-size: 2rem;
   }
 
@@ -428,6 +427,25 @@ header {
   border: none;
   border-radius: 10px;
   cursor: pointer;
+}
+
+/*-------------------------------------*/
+/*---------------Footer---------------*/
+/*-------------------------------------*/
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+  border: 1px solid black;
+  border-radius: 0.625rem;
+  font-size: 1rem;
+  font-weight: 600;
+  font-style: italic;
+  p {
+    margin: 5px 0;
+  }
 }
 
 /*-------------------------------------*/
